--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "inquirer": "^8.0.0",
     "minimist": "^1.2.5"
   },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "eslint": "^7.25.0",
+    "prettier": "^2.2.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://happylarrylin@bitbucket.org/esysteminc/nodejs.git"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "node_modules/.bin/eslint .",
+    "lint:fix": "node_modules/.bin/eslint . --fix",
+    "formatter:check":"node_modules/.bin/prettier --check **/*.js",
+    "formatter:format":"node_modules/.bin/prettier --write **/*.js"
   },
   "author": "",
-  "license": "ISC",
-  "homepage": "https://bitbucket.org/esysteminc/nodejs#readme"
+  "license": "ISC"
 }
