--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chalk-pipe": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.1.0",
     "inquirer": "^8.0.0",
     "minimist": "^1.2.5"
   },
@@ -18,8 +19,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "node_modules/.bin/eslint .",
     "lint:fix": "node_modules/.bin/eslint . --fix",
-    "formatter:check":"node_modules/.bin/prettier --check **/*.js",
-    "formatter:format":"node_modules/.bin/prettier --write **/*.js"
+    "formatter:check": "node_modules/.bin/prettier --check **/*.js",
+    "formatter:format": "node_modules/.bin/prettier --write **/*.js"
   },
   "author": "",
   "license": "ISC"
